--- a/main.html
+++ b/main.html
@@ -8,6 +8,31 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div>
+		<table style="border:1px solid black;" border="1">
+	 <thead style="background-color:yellow">
+			<th>NAME</th>
+			<th>AGE</th>
+			<th>BRANCH</th>
+
+     
+		 <tr>
+			<td>Shaw</td>
+			<td>20</td>
+			<td>CSE</td>
+			</tr>
+		
+		 <tr>
+			<td>Adil</td>
+			<td>21</td>
+			<td>ECE</td>
+			</tr>
+		
+   </thead>
+
+			</table>
+
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
