--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 	<!-- the entire body must be written by student -->
 	<div>
 		<table style="border:1px solid black;" border="1">
-	 <thead style="background-color:yellow">
+	 <thead>
 			<th>NAME</th>
 			<th>AGE</th>
 			<th>BRANCH</th>
