--- a/main.html
+++ b/main.html
@@ -14,8 +14,9 @@
 			<th>NAME</th>
 			<th>AGE</th>
 			<th>BRANCH</th>
+     </thead>
 
-     
+			<tbody>
 		 <tr>
 			<td>Shaw</td>
 			<td>20</td>
@@ -28,7 +29,7 @@
 			<td>ECE</td>
 			</tr>
 		
-   </thead>
+     </tbody>
 
 			</table>
 
